--- a/not.html
+++ b/not.html
@@ -11,8 +11,8 @@
     <h2> D.J.L.L. </h2> 
     
     <ul>
-        <li><a href="index.html" class="active">Ínicio</a></li>
-        <li><a href="not.html">Notícia</a></li>
+        <li><a href="index.html">Ínicio</a></li>
+        <li><a href="not.html"  class="active">Notícia</a></li>
         <li><a href="rep.html">Reportagem</a></li>
         <li><a href="rec.html">Receita</a></li>
         <li><a href="entrev.html">Entrevista</a></li>
