--- a/entrev.html
+++ b/entrev.html
@@ -23,7 +23,7 @@
 
 <p id="podcast1">Podcast - Entrevista com o professor Dauri Tavares</p>
 
-<iframe id="podcast2" src="https://www.youtube.com/watch?v=MoWf4apCVZg"></iframe>
+<iframe id="podcast2" src="https://www.youtube.com/watch?v=MoWf4apCVZg&t=3s"></iframe>
 
 </body>
 </html>
