--- a/entrev.html
+++ b/entrev.html
@@ -23,7 +23,7 @@
 
 <p id="podcast1">Podcast - Entrevista com o professor Dauri Tavares</p>
 
-<iframe id="podcast2" src="https://www.youtube.com/watch?v=MoWf4apCVZg&t=3s"></iframe>
+<iframe id="podcast2" width="560" height="315" src="https://www.youtube.com/embed/MoWf4apCVZg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
