--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <h2> D.J.L.L. </h2> 
 
 <ul>
-    <li><a class="active" href="index.html">Ínicio</a></li>
+    <li><a class="active" href="index.html">Início</a></li>
     <li><a href="not.html">Notícia</a></li>
     <li><a href="rep.html">Reportagem</a></li>
     <li><a href="rec.html">Receita</a></li>
     <li><a href="entrev.html">Entrevista</a></li>
 </ul>
 
-<h3 id="tit1">Ínicio</h3> 
+<h3 id="tit1">Início</h3> 
 
 <div id="mannot1">
     <p id="mannot2">Notícia</p>
