--- a/not.html
+++ b/not.html
@@ -11,7 +11,7 @@
     <h2> D.J.L.L. </h2> 
     
     <ul>
-        <li><a href="index.html">Ínicio</a></li>
+        <li><a href="index.html">Início</a></li>
         <li><a href="not.html" class="active">Notícia</a></li>
         <li><a href="rep.html">Reportagem</a></li>
         <li><a href="rec.html">Receita</a></li>
